--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ gunicorn==20.0.4
 django-heroku==0.3.1
 # cpu version of torch and torchvision for heroku to reduce slug size
 torch==1.8.1+cpu
+whitenoise==5.0.1
