--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 -f https://download.pytorch.org/whl/torch_stable.html
 django==3.2
-tensorflow-cpu
 gunicorn==20.0.4
 django-heroku==0.3.1
 # cpu version of torch and torchvision for heroku to reduce slug size
 torch==1.11.0+cpu
-whitenoise==5.0.1
 djangorestframework
 scikit-learn
+keras==2.6.0
